...
  TimeProvider timeProvider;
  Homepage(this.timeProvider);

  @override
  Widget build(BuildContext context) {
    return new DefaultTabController(
      key: Key("homepage"),
      length: meals.length,
      initialIndex: _getTabIndexWithRespectToTime(),
      child: new Scaffold(
        appBar: new AppBar(
          title: new Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
